# actilabelv2

./: .gitignore  README.md  elsa_study.py  env.yml  example.py  label_study.py  main.py  project_config.yaml  pyproject.toml
src/actilabelv2/: elsa.py  label_study.py  main.py
